--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site-twitter: #if your site has a twitter account, enter it here
 author: Mauricio # add your name
 author-img: eu.jpg # add your photo
 about-author: Olá! Eu sou o Mauricio e esse blog mostrará um pouco da minha atual rotina de estudos. # add description
-social-twitter: mautoz # add your Twitter handle
+social-twitter: mauricioozaki # add your Twitter handle
 social-facebook: mtavoz # add your Facebook handle
 social-github: mautoz # add your Github handle
 social-linkedin: mauricio-ozaki # add your Linkedin handle
