Post 5 ainda em andamento. Parte 2

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: Mauricio # add your name
 author-img: eu.jpg # add your photo
-about-author: Olá! Eu sou o Mauricio e criei esta página para registrar a evolução no desenvolvimento do meu TCC. # add description
+about-author: Olá! Eu sou o Mauricio e criei esta página para registrar a evolução no desenvolvimento do projeto de ACH2018. # add description
 social-twitter: mauricioozaki # add your Twitter handle
 social-facebook: mtavoz # add your Facebook handle
 social-github: mautoz # add your Github handle
