--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@ bio:                'Software Developer / Retro games fan / Book Lover'
 description:        'More about me and social media links'
 reading_time:       true
 words_per_minute:   200
-logo:               'assets/img/logo.png'
+logo:               'assets/img/code_person.png'
 background:         'assets/img/code.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                https://mautoz.github.io/
+url:                https://mautoz.github.io
 
 # Jekyll
 permalink:          /:title/
